--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,13 @@
         "typescript": "^5.8.3"
     },
     "dependencies": {
+        "@elastic/elasticsearch": "^9.0.3",
+        "@google/genai": "^1.10.0",
+        "@slack/webhook": "^7.0.5",
+        "axios": "^1.11.0",
         "dotenv": "^17.2.0",
         "imapflow": "^1.0.191",
-        "mailparser": "^3.7.4"
+        "mailparser": "^3.7.4",
+        "uuid": "^11.1.0"
     }
 }
