Created search route for accessing emails form elastic search. Added search functionality in emailIndex. Improved frontend store to adapt with this backend. Added store states and methods in client components for centralized state management.

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "author": "SK Imtiaj Uddin <imtiaj.kol@gmail.com>",
     "license": "MIT",
     "devDependencies": {
+        "@types/cors": "^2.8.19",
+        "@types/express": "^5.0.3",
         "@types/mailparser": "^3.4.6",
         "@types/node": "^24.1.0",
         "cross-env": "^7.0.3",
@@ -29,7 +31,10 @@
         "@google/genai": "^1.10.0",
         "@slack/webhook": "^7.0.5",
         "axios": "^1.11.0",
+        "body-parser": "^2.2.0",
+        "cors": "^2.8.5",
         "dotenv": "^17.2.0",
+        "express": "^5.1.0",
         "imapflow": "^1.0.191",
         "mailparser": "^3.7.4",
         "uuid": "^11.1.0"
